convertedToMDAPI/objects/Purpose__c.object
<CustomObject>
    <label>Purpose</label>
    <nameField>
        <label>Purpose Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purposes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ParentPurpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Purpose</label>
        <referenceTo>Purpose__c</referenceTo>
        <relationshipLabel>Child Purposes</relationshipLabel>
        <relationshipName>PurposeChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurposeCode__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Purpose Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>